# todo-server

./: .gitignore  .terraform.lock.hcl  Cargo.toml  ca-certificate.crt  cross.toml  crossShell.nix  flake.nix  flake.nix.bak  garnix.yaml  image.pkr.hcl  infra.tf  init.sql  jobspec.nomad.hcl  result  rustbuild.nix  terraform.tfstate  terraform.tfstate.backup  volume.hcl
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5j4s19z9hmwqz9ivi989h8d9hrx4zrl7-source  7p6khy60h15kn2wzq3mmdfvxvkv5kz1b-source  9a2zrxa4vdqw26fi4s6vpv9szjcsndmh-source  crqwqzkxi64a3h0yv0cg3aycb6nby4p8-source  ga0kh69jgp4m00rbnpfsgvswsk085vhg-source  gj4ahggrgxl94ck8vlyl40b1rdck7wq7-source  xnkf238dsi8x8fm567psrk2qg7z8nv3v-source  z6v3z34qaf65q4m5ywrp4s9j9j4wwslv-source
.github/workflows/: deploy.yml  flake.yml  rust.yml
src/: main.rs  sql.rs
