[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.7"
postgres-openssl = "0.5.0"
openssl = { version = "0.10.45", features = ["vendored"] }

serde = {version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
actix-web = "4.3.1"
actix-cors = "0.6.4"
