[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.7"
rustls = "0.20.8"
tokio-postgres-rustls = "0.9.0"
rustls-pemfile = "1.0.2"

serde = {version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
actix-web = "4.3.1"
actix-cors = "0.6.4"

proc-macro2 = { version = ">1.0.60" }
ahash = { version = ">=0.8" }
